# teamspirit_auto

./: .gitignore  README.md  pyproject.toml
src/: browser_operation.py  date_manager.py  main.py  pop_up.py  user_info.py
